--- a/gridot/GriDot/PopupStoryboards/ColorPaletteListPopup.storyboard
+++ b/gridot/GriDot/PopupStoryboards/ColorPaletteListPopup.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -14,7 +13,7 @@
         <!--Color Palette List Popup View Controller-->
         <scene sceneID="3FT-yX-aEC">
             <objects>
-                <viewController storyboardIdentifier="ColorPaletteListPopupViewController" id="7fK-YV-cte" customClass="ColorPaletteListPopupViewController" customModule="spriteMaker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ColorPaletteListPopupViewController" id="7fK-YV-cte" customClass="ColorPaletteListPopupViewController" customModule="GriDot" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Gth-Wv-D7d">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -65,7 +64,7 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="5"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorPaletteCell" id="EwK-FN-g91" customClass="ColorPaletteCell" customModule="spriteMaker" customModuleProvider="target">
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorPaletteCell" id="EwK-FN-g91" customClass="ColorPaletteCell" customModule="GriDot" customModuleProvider="target">
                                                 <rect key="frame" x="5.5" y="0.0" width="342" height="103"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="HLf-9h-5Lz">
@@ -88,7 +87,7 @@
                                                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                             </collectionViewFlowLayout>
                                                             <cells>
-                                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorFrameCell" id="A7k-Pp-4h6" customClass="ColorFrameCell" customModule="spriteMaker" customModuleProvider="target">
+                                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorFrameCell" id="A7k-Pp-4h6" customClass="ColorFrameCell" customModule="GriDot" customModuleProvider="target">
                                                                     <rect key="frame" x="0.0" y="4.5" width="62" height="56"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9tx-ZT-tWX">
@@ -220,7 +219,7 @@
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bA8-LQ-twQ">
-                                        <rect key="frame" x="61" y="5" width="60" height="30"/>
+                                        <rect key="frame" x="59.5" y="5" width="60" height="30"/>
                                         <color key="backgroundColor" systemColor="systemPinkColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="bA8-LQ-twQ" secondAttribute="height" multiplier="2:1" id="izK-Dq-ZqB"/>
@@ -235,7 +234,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YON-ai-GdO">
-                                        <rect key="frame" x="66" y="7" width="25.5" height="24.5"/>
+                                        <rect key="frame" x="64.5" y="6" width="26.5" height="26.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" name="Icon"/>
                                         <state key="normal" image="gearshape.fill" catalog="system">
@@ -249,7 +248,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Rm-3P-NGq">
-                                        <rect key="frame" x="20" y="6.5" width="26" height="26"/>
+                                        <rect key="frame" x="20" y="7" width="24.5" height="24.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="5Rm-3P-NGq" secondAttribute="height" multiplier="1:1" id="d6P-LI-Mxg"/>
                                         </constraints>
