--- a/gridot/GriDot/PopupStoryboards/RenamePopup.storyboard
+++ b/gridot/GriDot/PopupStoryboards/RenamePopup.storyboard
@@ -19,10 +19,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hbY-Ot-sN7">
-                                <rect key="frame" x="41.5" y="293" width="331" height="220"/>
+                                <rect key="frame" x="57" y="343" width="300" height="120"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nc5-0W-xdZ">
+                                        <rect key="frame" x="10" y="25" width="280" height="0.0"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="280" id="Xq6-IL-yXM"/>
+                                            <constraint firstAttribute="height" id="vCQ-WY-sfc"/>
+                                        </constraints>
+                                    </view>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m9R-NY-g5o">
-                                        <rect key="frame" x="66" y="130" width="199" height="30"/>
+                                        <rect key="frame" x="60" y="25" width="180" height="30"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -35,18 +43,17 @@
                                             <outlet property="delegate" destination="cLQ-vd-hq0" id="nmY-k0-mvE"/>
                                         </connections>
                                     </textField>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nc5-0W-xdZ">
-                                        <rect key="frame" x="20" y="20" width="291" height="100"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="vCQ-WY-sfc"/>
-                                        </constraints>
-                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="영문과 숫자로 이름을 입력해주세요" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tog-rE-AQK">
+                                        <rect key="frame" x="0.0" y="57" width="300" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7ch-Hp-NvW">
-                                        <rect key="frame" x="0.0" y="170" width="331" height="50"/>
+                                        <rect key="frame" x="0.0" y="80" width="300" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N4T-8E-pxM">
-                                                <rect key="frame" x="-2" y="0.0" width="169.5" height="52"/>
+                                                <rect key="frame" x="-2" y="0.0" width="154" height="42"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="tintColor" name="Icon"/>
                                                 <state key="normal">
@@ -57,7 +64,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mJL-AD-6sx">
-                                                <rect key="frame" x="165.5" y="0.0" width="165.5" height="50"/>
+                                                <rect key="frame" x="150" y="0.0" width="150" height="40"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal">
@@ -77,22 +84,25 @@
                                             <constraint firstItem="N4T-8E-pxM" firstAttribute="width" secondItem="7ch-Hp-NvW" secondAttribute="width" multiplier="0.5" constant="4" id="RDe-n4-dy8"/>
                                             <constraint firstItem="N4T-8E-pxM" firstAttribute="top" secondItem="7ch-Hp-NvW" secondAttribute="top" id="hJM-lv-yrN"/>
                                             <constraint firstAttribute="bottom" secondItem="N4T-8E-pxM" secondAttribute="bottom" constant="-2" id="kTj-Vp-ezt"/>
-                                            <constraint firstAttribute="height" constant="50" id="pMZ-G3-oK2"/>
+                                            <constraint firstAttribute="height" constant="40" id="pMZ-G3-oK2"/>
                                             <constraint firstAttribute="bottom" secondItem="mJL-AD-6sx" secondAttribute="bottom" id="rha-ax-7Ex"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" name="Color2"/>
                                 <constraints>
-                                    <constraint firstItem="Nc5-0W-xdZ" firstAttribute="leading" secondItem="hbY-Ot-sN7" secondAttribute="leading" constant="20" id="0Mc-C6-fB4"/>
                                     <constraint firstItem="m9R-NY-g5o" firstAttribute="width" secondItem="hbY-Ot-sN7" secondAttribute="width" multiplier="0.6" id="7te-mI-wS8"/>
                                     <constraint firstItem="7ch-Hp-NvW" firstAttribute="centerX" secondItem="hbY-Ot-sN7" secondAttribute="centerX" id="E2D-yU-7pP"/>
+                                    <constraint firstAttribute="width" constant="300" id="Njc-u0-XBh"/>
                                     <constraint firstItem="m9R-NY-g5o" firstAttribute="centerX" secondItem="hbY-Ot-sN7" secondAttribute="centerX" id="RBF-b0-8wa"/>
-                                    <constraint firstItem="m9R-NY-g5o" firstAttribute="top" secondItem="Nc5-0W-xdZ" secondAttribute="bottom" constant="10" id="WS6-kK-F8c"/>
-                                    <constraint firstItem="Nc5-0W-xdZ" firstAttribute="top" secondItem="hbY-Ot-sN7" secondAttribute="top" constant="20" id="cNq-ZZ-uqP"/>
-                                    <constraint firstAttribute="trailing" secondItem="Nc5-0W-xdZ" secondAttribute="trailing" constant="20" id="foZ-xC-cHI"/>
+                                    <constraint firstItem="Nc5-0W-xdZ" firstAttribute="centerX" secondItem="m9R-NY-g5o" secondAttribute="centerX" id="UOG-N0-B4t"/>
+                                    <constraint firstItem="m9R-NY-g5o" firstAttribute="top" secondItem="Nc5-0W-xdZ" secondAttribute="bottom" id="WS6-kK-F8c"/>
+                                    <constraint firstItem="Nc5-0W-xdZ" firstAttribute="top" secondItem="hbY-Ot-sN7" secondAttribute="top" constant="25" id="cNq-ZZ-uqP"/>
+                                    <constraint firstItem="Tog-rE-AQK" firstAttribute="top" secondItem="m9R-NY-g5o" secondAttribute="bottom" constant="2" id="ewg-hJ-RZE"/>
                                     <constraint firstItem="7ch-Hp-NvW" firstAttribute="width" secondItem="hbY-Ot-sN7" secondAttribute="width" id="kaT-JA-1GU"/>
-                                    <constraint firstItem="7ch-Hp-NvW" firstAttribute="top" secondItem="m9R-NY-g5o" secondAttribute="bottom" constant="10" id="n38-RO-R2o"/>
+                                    <constraint firstItem="7ch-Hp-NvW" firstAttribute="top" secondItem="m9R-NY-g5o" secondAttribute="bottom" constant="25" id="n38-RO-R2o"/>
+                                    <constraint firstAttribute="trailing" secondItem="Tog-rE-AQK" secondAttribute="trailing" id="nyI-47-8Ax"/>
+                                    <constraint firstItem="Tog-rE-AQK" firstAttribute="leading" secondItem="hbY-Ot-sN7" secondAttribute="leading" id="qNT-1y-W8g"/>
                                     <constraint firstAttribute="bottom" secondItem="7ch-Hp-NvW" secondAttribute="bottom" id="zPp-Gn-UBs"/>
                                 </constraints>
                             </view>
@@ -100,7 +110,6 @@
                         <viewLayoutGuide key="safeArea" id="QlD-B6-K0J"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hbY-Ot-sN7" firstAttribute="width" secondItem="IFw-Bw-SiZ" secondAttribute="width" multiplier="0.8" id="dQL-Fe-NaV"/>
                             <constraint firstItem="hbY-Ot-sN7" firstAttribute="centerX" secondItem="QlD-B6-K0J" secondAttribute="centerX" id="oWO-78-mB3"/>
                             <constraint firstItem="hbY-Ot-sN7" firstAttribute="centerY" secondItem="QlD-B6-K0J" secondAttribute="centerY" constant="-50" id="rnY-ci-MIW"/>
                         </constraints>
@@ -109,6 +118,8 @@
                         <outlet property="closeButton" destination="N4T-8E-pxM" id="rlW-Ja-piW"/>
                         <outlet property="contentView" destination="Nc5-0W-xdZ" id="OvZ-0p-jBo"/>
                         <outlet property="contentViewHeightConstraint" destination="vCQ-WY-sfc" id="cPC-nO-oW6"/>
+                        <outlet property="contentViewWidthConstraint" destination="Xq6-IL-yXM" id="Zun-rG-RqY"/>
+                        <outlet property="errorLabel" destination="Tog-rE-AQK" id="MPb-3I-6eJ"/>
                         <outlet property="superView" destination="hbY-Ot-sN7" id="1tB-4m-gVH"/>
                         <outlet property="textField" destination="m9R-NY-g5o" id="ZeK-MM-b6q"/>
                     </connections>
